@@ -8,11 +8,11 @@ import ru.hh.oauth.subscribe.core.utils.Preconditions;
 
 public class FacebookApi extends DefaultApi20 {
 
-    private static final String AUTHORIZE_URL = "https://www.facebook.com/v2.0/dialog/oauth?client_id=%s&redirect_uri=%s";
+    private static final String AUTHORIZE_URL = "https://www.facebook.com/v2.2/dialog/oauth?client_id=%s&redirect_uri=%s";
 
     @Override
     public String getAccessTokenEndpoint() {
-        return "https://graph.facebook.com/v2.0/oauth/access_token";
+        return "https://graph.facebook.com/v2.2/oauth/access_token";
     }
 
     @Override
