@@ -8,7 +8,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Future;
-import ru.hh.oauth.subscribe.core.exceptions.OAuthConnectionException;
 import ru.hh.oauth.subscribe.core.exceptions.OAuthException;
 import ru.hh.oauth.subscribe.core.oauth.OAuthService;
 
@@ -16,12 +15,12 @@ public class OAuthRequestAsync extends AbstractRequest {
 
     public static final ResponseConverter<Response> RESPONSE_CONVERTER = new ResponseConverter<Response>() {
         @Override
-        public Response convert(com.ning.http.client.Response response) throws IOException {
+        public Response convert(final com.ning.http.client.Response response) throws IOException {
             final FluentCaseInsensitiveStringsMap map = response.getHeaders();
             final Map<String, String> headersMap = new HashMap<>();
-            for (FluentCaseInsensitiveStringsMap.Entry<String, List<String>> header : map) {
+            for (final FluentCaseInsensitiveStringsMap.Entry<String, List<String>> header : map) {
                 final StringBuilder value = new StringBuilder();
-                for (String str : header.getValue()) {
+                for (final String str : header.getValue()) {
                     value.append(str);
                 }
                 headersMap.put(header.getKey(), value.toString());
@@ -31,16 +30,16 @@ public class OAuthRequestAsync extends AbstractRequest {
         }
     };
 
-    public OAuthRequestAsync(Verb verb, String url, OAuthService service) {
+    public OAuthRequestAsync(final Verb verb, final String url, final OAuthService service) {
         super(verb, url, service);
     }
 
     public <T> Future<T> sendAsync(final OAuthAsyncRequestCallback<T> callback, final ResponseConverter<T> converter) {
         final ForceTypeOfHttpRequest forceTypeOfHttpRequest = SubScribeConfig.getForceTypeOfHttpRequests();
-        final OAuthService service = getService();
         if (ForceTypeOfHttpRequest.FORCE_SYNC_ONLY_HTTP_REQUESTS == forceTypeOfHttpRequest) {
             throw new OAuthException("Cannot use async operations, only sync");
         }
+        final OAuthService service = getService();
         if (ForceTypeOfHttpRequest.PREFER_SYNC_ONLY_HTTP_REQUESTS == forceTypeOfHttpRequest) {
             service.getConfig().log("Cannot use async operations, only sync");
         }
@@ -56,29 +55,35 @@ public class OAuthRequestAsync extends AbstractRequest {
             default:
                 throw new IllegalArgumentException("message build error: unknown verb type");
         }
-        try {
-            return boundRequestBuilder.execute(
-                    new AsyncCompletionHandler<T>() {
-                        @Override
-                        public T onCompleted(com.ning.http.client.Response response) throws Exception {
-                            T t = converter.convert(response);
-                            if (callback != null) {
-                                callback.onCompleted(t);
-                            }
-                            return t;
-                        }
-
-                        @Override
-                        public void onThrowable(Throwable t) {
-                            if (callback != null) {
-                                callback.onThrowable(t);
-                            }
-                        }
-                    });
-        } catch (IOException e) {
-            throw new OAuthConnectionException(e);
-        }
+        return boundRequestBuilder.execute(new OAuthAsyncCompletionHandler<>(callback, converter));
     }
+
+    private static class OAuthAsyncCompletionHandler<T> extends AsyncCompletionHandler<T> {
+
+        private final OAuthAsyncRequestCallback<T> callback;
+        private final ResponseConverter<T> converter;
+
+        OAuthAsyncCompletionHandler(final OAuthAsyncRequestCallback<T> callback, final ResponseConverter<T> converter) {
+            this.callback = callback;
+            this.converter = converter;
+        }
+
+        @Override
+        public T onCompleted(final com.ning.http.client.Response response) throws IOException {
+            final T t = converter.convert(response);
+            if (callback != null) {
+                callback.onCompleted(t);
+            }
+            return t;
+        }
+
+        @Override
+        public void onThrowable(final Throwable t) {
+            if (callback != null) {
+                callback.onThrowable(t);
+            }
+        }
+    };
 
     public Future<Response> sendAsync(final OAuthAsyncRequestCallback<Response> callback) {
         return sendAsync(callback, RESPONSE_CONVERTER);
