@@ -1,5 +1,6 @@
 package ru.hh.oauth.subscribe.core.utils;
 
+import java.util.Locale;
 import java.util.regex.Pattern;
 import ru.hh.oauth.subscribe.core.model.OAuthConstants;
 
@@ -8,15 +9,12 @@ import ru.hh.oauth.subscribe.core.model.OAuthConstants;
  *
  * @author Pablo Fernandez
  */
-public class Preconditions {
+public abstract class Preconditions {
 
     private static final String DEFAULT_MESSAGE = "Received an invalid parameter";
 
     // scheme = alpha *( alpha | digit | "+" | "-" | "." )
     private static final Pattern URL_PATTERN = Pattern.compile("^[a-zA-Z][a-zA-Z0-9+.-]*://\\S+");
-
-    private Preconditions() {
-    }
 
     /**
      * Checks that an object is not null.
@@ -26,7 +24,7 @@ public class Preconditions {
      *
      * @throws IllegalArgumentException if the object is null
      */
-    public static void checkNotNull(Object object, String errorMsg) {
+    public static void checkNotNull(final Object object, final String errorMsg) {
         check(object != null, errorMsg);
     }
 
@@ -38,8 +36,8 @@ public class Preconditions {
      *
      * @throws IllegalArgumentException if the string is null or empty
      */
-    public static void checkEmptyString(String string, String errorMsg) {
-        check(string != null && !string.trim().equals(""), errorMsg);
+    public static void checkEmptyString(final String string, final String errorMsg) {
+        check(string != null && !string.trim().isEmpty(), errorMsg);
     }
 
     /**
@@ -48,7 +46,7 @@ public class Preconditions {
      * @param url any string
      * @param errorMsg error message
      */
-    public static void checkValidUrl(String url, String errorMsg) {
+    public static void checkValidUrl(final String url, final String errorMsg) {
         checkEmptyString(url, errorMsg);
         check(isUrl(url), errorMsg);
     }
@@ -59,21 +57,20 @@ public class Preconditions {
      * @param url any string
      * @param errorMsg error message
      */
-    public static void checkValidOAuthCallback(String url, String errorMsg) {
+    public static void checkValidOAuthCallback(final String url, final String errorMsg) {
         checkEmptyString(url, errorMsg);
-        if (url.toLowerCase().compareToIgnoreCase(OAuthConstants.OUT_OF_BAND) != 0) {
+        if (url.toLowerCase(Locale.getDefault()).compareToIgnoreCase(OAuthConstants.OUT_OF_BAND) != 0) {
             check(isUrl(url), errorMsg);
         }
     }
 
-    private static boolean isUrl(String url) {
+    private static boolean isUrl(final String url) {
         return URL_PATTERN.matcher(url).matches();
     }
 
-    private static void check(boolean requirements, String error) {
-        String message = (error == null || error.trim().length() <= 0) ? DEFAULT_MESSAGE : error;
+    private static void check(final boolean requirements, final String error) {
         if (!requirements) {
-            throw new IllegalArgumentException(message);
+            throw new IllegalArgumentException(error == null || error.trim().length() <= 0 ? DEFAULT_MESSAGE : error);
         }
     }
 
