@@ -1,3 +1,7 @@
+[SNAPSHOT]
+ * update FaceBook API version from 2.0 to 2.2
+ * update ning dependency for async functionality
+
 [3.0]
  * make compilable with OpenJDK8 
  * add async functionality
